<resources>
    <string name="app_name">My Application</string>
    <string name="faculty_of_engineering">Faculty of Engineering</string>
    <string name="tan_bunchhay">Tan Bunchhay</string>
    <string name="major">Major</string>
    <string name="it_engineering">IT Engineering</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="_2820_tan_bunchha_rupp_edu_kh">2820.tan.bunchha@rupp.edu.kh</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="visit_cambodia_with_me">Visit Cambodia with Me</string>
    <string name="get_started">Get Started</string>
    <string name="email">Email</string>
    <string name="sign_in">Sign In</string>
    <string name="or_sign_in_with">Or sign in with:</string>
</resources>